initial css styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
     <title>Студия</title>
   </head>
 
@@ -11,7 +14,7 @@
     <header>
       <!-- logo -->
       <div>
-        <a href="./">Web<span>Studio</span></a>
+        <a class="title-main" href="./">Web<span class="title">Studio</span></a>
       </div>
 
       <!-- main nav -->
@@ -32,8 +35,8 @@
     <main>
       <!-- hero section -->
       <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <input type="button" value="Заказать услугу" />
+        <h1>Эффективные решения <br> для вашего бизнеса</h1>
+        <input class="service-button"type="button" value="Заказать услугу" />
         <!-- <button>Заказать услугу</button> -->
       </section>
       <!-- activities section  -->
