--- a/index.html
+++ b/index.html
@@ -13,30 +13,31 @@
   <body>
     <header>
       <!-- logo -->
-      <div>
+     
         <a class="title-main" href="./">Web<span class="title">Studio</span></a>
-      </div>
+     
 
       <!-- main nav -->
-      <nav>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+      <nav class="nav">
+        <ul class="nav-ul">
+          <li class="nav-li"><a class="nav-li-stud" href="">Студия</a></li>
+          <li class="nav-li"><a class="nav-li-port" href="">Портфолио</a></li>
+          <li class="nav-li"><a class="nav-li-cont"href="">Контакты</a></li>
         </ul>
       </nav>
 
       <!-- contacts -->
-      <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <div class="contacts">
+        <a class="cont-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="cont-tel" href="tel:+380961111111">+38 096 111 11 11</a>
       </div>
     </header>
+
     <main>
       <!-- hero section -->
-      <section>
-        <h1>Эффективные решения <br> для вашего бизнеса</h1>
-        <input class="service-button"type="button" value="Заказать услугу" />
+      <section class="hero">
+        <h1 class="main-hero">Эффективные решения <br> для вашего бизнеса</h1>
+        <input class="button" type="button" value="Заказать услугу" />
         <!-- <button>Заказать услугу</button> -->
       </section>
       <!-- activities section  -->
