portfolio styles edited

--- a/portfolio.html
+++ b/portfolio.html
@@ -96,12 +96,12 @@
           </ul>
         </section>
     </main>
-    <footer class="footer1">
-        <a class="footer-logo1" href="./">Web<span class="footer-logo-style1">Studio</span></a>
+    <footer class="footer">
+        <a class="footer-logo" href="./">Web<span class="footer-logo-style">Studio</span></a>
       <address>
-        <p class="footer-address1">г. Киев, пр-т Леси Украинки, 26</p>
-        <a class="footer-mail1" href="mailto:info@example.com">info@example.com</a>
-        <a class="footer-tel1" href="tel:+380991111111">+38 099 111 11 11</a>
+        <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+        <a class="footer-mail" href="mailto:info@example.com">info@example.com</a>
+        <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
       </address>
     </footer>
   </body>
