styles in portfolio

--- a/index.html
+++ b/index.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto" >
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//fonts.googleapis.com/css?family=Raleway:700"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="http://fonts.googleapis.com/css?family=Roboto:400,500,700,900"
+    />
     <title>Студия</title>
   </head>
 
   <body>
     <header>
       <!-- logo -->
-        <a class="title-main" href="./">Web<span class="title">Studio</span></a>
+      <a class="title-main" href="./">Web<span class="title">Studio</span></a>
       <!-- main nav -->
       <nav class="nav">
         <ul class="nav-ul">
           <li class="nav-li"><a class="nav-li-stud" href="">Студия</a></li>
           <li class="nav-li"><a class="nav-li-port" href="">Портфолио</a></li>
-          <li class="nav-li"><a class="nav-li-cont"href="">Контакты</a></li>
+          <li class="nav-li"><a class="nav-li-cont" href="">Контакты</a></li>
         </ul>
       </nav>
       <!-- contacts -->
       <div class="contacts">
-        <a class="cont-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="cont-mail" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
         <a class="cont-tel" href="tel:+380961111111">+38 096 111 11 11</a>
       </div>
     </header>
@@ -33,8 +43,13 @@
     <main>
       <!-- hero section -->
       <section class="hero">
-        <h1 class="main-hero">Эффективные решения <br> для вашего бизнеса</h1>
-        <button class="button-order" type="button"><div class="button-text">Заказать услугу</div></button>
+        <h1 class="main-hero">
+          Эффективные решения <br />
+          для вашего бизнеса
+        </h1>
+        <button class="button-order" type="button">
+          <div class="button-text">Заказать услугу</div>
+        </button>
         <!-- <button>Заказать услугу</button> -->
       </section>
       <!-- activities section  -->
@@ -71,15 +86,21 @@
         </ul>
       </section>
       <!-- our team section  -->
-      <section >
+      <section>
         <h2 class="wwd-title">Чем мы занимаемся</h2>
         <ul class="wwd-list">
-          <li class="wwd-item1"><img src="./images/wwd1.jpg" alt="wwdimg1"></li>
-          <li class="wwd-item2"><img src="./images/wwd2.jpg" alt="wwdimg2"></li>
-          <li class="wwd-item3"><img src="./images/wwd3.jpg" alt="wwdimg3"></li>
+          <li class="wwd-item1">
+            <img src="./images/wwd1.jpg" alt="wwdimg1" />
+          </li>
+          <li class="wwd-item2">
+            <img src="./images/wwd2.jpg" alt="wwdimg2" />
+          </li>
+          <li class="wwd-item3">
+            <img src="./images/wwd3.jpg" alt="wwdimg3" />
+          </li>
         </ul>
       </section>
-      
+
       <section class="our-tema">
         <h2 class="tema-title">Наша команда</h2>
         <ul class="tema-items">
@@ -107,10 +128,14 @@
       </section>
     </main>
     <footer class="foot">
-      <a class="footer-logo" href="./">Web<span class="footer-logo-style">Studio</span></a>
+      <a class="footer-logo" href="./"
+        >Web<span class="footer-logo-style">Studio</span></a
+      >
       <address>
         <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
-        <a class="footer-mail" href="mailto:info@example.com">info@example.com</a>
+        <a class="footer-mail" href="mailto:info@example.com"
+          >info@example.com</a
+        >
         <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
       </address>
     </footer>
