--- a/portfolio.html
+++ b/portfolio.html
@@ -2,12 +2,13 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
+    <meta descrition="Страница портфолио">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/portfolio.css">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway:700" />
+    <link href="http://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet" type="text/css">
     <title>Портфолио</title>
   </head>
 
@@ -34,69 +35,65 @@
           <section class="portfolio">
           <nav>
               <ul class="port-nav-items">
-                  <li class="port-nav-item"><a href="">Все</a></li>
-                  <li class="port-nav-item"><a href="">Веб-сайты</a></li>
-                  <li class="port-nav-item"><a href="">Приложения</a></li>
-                  <li class="port-nav-item"><a href="">Дизайн</a></li>
-                  <!-- ХЗ шо ту робить -->
-                  <li class="port-nav-item"><a href="">Все</a></li>
-                  <li class="port-nav-item"><a href="">Веб-сайты</a></li>
-                  <li class="port-nav-item"><a href="">Приложения</a></li>
-                  <li class="port-nav-item"><a href="">Дизайн</a></li>
-                  <li class="port-nav-item"><a href="">Маркетинг</a></li>
+                  <li><button class="port-nav-item all" type="button">Все</button></li>
+                  <li><button class="port-nav-item web" type="button">Веб-сайты</button></li>
+                  <li><button class="port-nav-item app" type="button">Приложения</button></li>
+                  <li><button class="port-nav-item design" type="button">Дизайн</button></li>
+                  <li><button class="port-nav-item market" type="button">Маркетинг</button></li>
               </ul>
           </nav>
+         
        
-          <ul class="li-port">
-              <li class="li-port9">
-                  <img src="./images/port1.jpg" alt="">
+          <ul class="port-list">
+              <li class="li-port">
+                  <img src="./images/port1.jpg" alt="Технокряк" width="370">
                   <h3 class="li-port-title">Технокряк</h>
                   <p class="li-port-desciption">Веб-сайт</p>
               </li>
-              <li class="li-port9">
-                <img src="./images/port2.jpg" alt="">
+              <li class="li-port">
+                <img src="./images/port2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
                   <h3 class="li-port-title">Постер New Orlean vs Golden Star</h>
                   <p class="li-port-desciption">Дизайн</p>
               </li>
-              <li class="li-port9">
-                <img src="./images/port3.jpg" alt="">
+              <li class="li-port">
+                <img src="./images/port3.jpg" alt="есторан Seafood" width="370">
                   <h3 class="li-port-title">Ресторан Seafood</h>
                   <p class="li-port-desciption">Приложение</p>
               </li>
-              <li class="li-port9">
-                <img src="./images/port4.jpg" alt="">
+              <li class="li-port">
+                <img src="./images/port4.jpg" alt="Проект Prime" width="370">
                   <h3 class="li-port-title">Проект Prime</h>
                   <p class="li-port-desciption">Маркетинг</p>
               </li>
-              <li class="li-port9">
-                <img src="./images/port5.jpg" alt="">
+              <li class="li-port">
+                <img src="./images/port5.jpg" alt="Проект Boxes" width="370">
                   <h3 class="li-port-title">Проект Boxes</h>
                   <p class="li-port-desciption">Приложение</p>
               </li>
-              <li class="li-port9">
-                <img src="./images/port6.jpg" alt="">
+              <li class="li-port">
+                <img src="./images/port6.jpg" alt="Inspiration has no Borders" width="370">
                   <h3 class="li-port-title">Inspiration has no Borders</h>
                   <p class="li-port-desciption">Веб-сайт</p>
               </li>
-              <li class="li-port9">
-                <img src="./images/port7.jpg" alt="">
+              <li class="li-port">
+                <img src="./images/port7.jpg" alt="Издание Limited Edition" width="370">
                   <h3 class="li-port-title">Издание Limited Edition</h>
                   <p class="li-port-desciption">Дизайн</p>
-              </li class="li-port9">
-              <li class="li-port9">
-                <img src="./images/port8.jpg" alt="">
+              </li>
+              <li class="li-port">
+                <img src="./images/port8.jpg" alt="роект LAB" width="370">
                   <h3 class="li-port-title">Проект LAB</h>
                   <p class="li-port-desciption">Маркетинг</p>
               </li>
-              <li class="li-port9">
-                <img src="./images/port9.jpg" alt="">
+              <li class="li-port">
+                <img src="./images/port9.jpg" alt="Growing Business" width="370">
                   <h3 class="li-port-title">Growing Business</h>
                   <p class="li-port-desciption">Приложение</p>
               </li>
           </ul>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="foot">
         <a class="footer-logo" href="./">Web<span class="footer-logo-style">Studio</span></a>
       <address>
         <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
