add portfolio styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,47 +45,47 @@
          
        
           <ul class="port-list">
-              <li class="li-port">
+              <li class="li-port tech">
                   <img src="./images/port1.jpg" alt="Технокряк" width="370">
                   <h3 class="li-port-title">Технокряк</h>
                   <p class="li-port-desciption">Веб-сайт</p>
               </li>
-              <li class="li-port">
+              <li class="li-port poster">
                 <img src="./images/port2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
                   <h3 class="li-port-title">Постер New Orlean vs Golden Star</h>
                   <p class="li-port-desciption">Дизайн</p>
               </li>
-              <li class="li-port">
-                <img src="./images/port3.jpg" alt="есторан Seafood" width="370">
+              <li class="li-port rest">
+                <img src="./images/port3.jpg" alt="Ресторан Seafood" width="370">
                   <h3 class="li-port-title">Ресторан Seafood</h>
                   <p class="li-port-desciption">Приложение</p>
               </li>
-              <li class="li-port">
+              <li class="li-port project">
                 <img src="./images/port4.jpg" alt="Проект Prime" width="370">
                   <h3 class="li-port-title">Проект Prime</h>
                   <p class="li-port-desciption">Маркетинг</p>
               </li>
-              <li class="li-port">
+              <li class="li-port boxes"> 
                 <img src="./images/port5.jpg" alt="Проект Boxes" width="370">
                   <h3 class="li-port-title">Проект Boxes</h>
                   <p class="li-port-desciption">Приложение</p>
               </li>
-              <li class="li-port">
+              <li class="li-port inspire">
                 <img src="./images/port6.jpg" alt="Inspiration has no Borders" width="370">
                   <h3 class="li-port-title">Inspiration has no Borders</h>
                   <p class="li-port-desciption">Веб-сайт</p>
               </li>
-              <li class="li-port">
+              <li class="li-port edition">
                 <img src="./images/port7.jpg" alt="Издание Limited Edition" width="370">
                   <h3 class="li-port-title">Издание Limited Edition</h>
                   <p class="li-port-desciption">Дизайн</p>
               </li>
-              <li class="li-port">
+              <li class="li-port lab">
                 <img src="./images/port8.jpg" alt="роект LAB" width="370">
                   <h3 class="li-port-title">Проект LAB</h>
                   <p class="li-port-desciption">Маркетинг</p>
               </li>
-              <li class="li-port">
+              <li class="li-port busy">
                 <img src="./images/port9.jpg" alt="Growing Business" width="370">
                   <h3 class="li-port-title">Growing Business</h>
                   <p class="li-port-desciption">Приложение</p>
