--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <body>
     <header>
       <!-- logo -->
-        <a class="title-main" href="./">Web<span class="title">Studio</span></a>
+        <a class="title-main" href="./index.html">Web<span class="title">Studio</span></a>
       <!-- main nav -->
       <nav class="nav">
         <ul class="nav-ul">
-          <li class="nav-li"><a class="nav-li-stud" href="">Студия</a></li>
-          <li class="nav-li"><a class="nav-li-port" href="">Портфолио</a></li>
+          <li class="nav-li"><a class="nav-li-stud" href="./index.html">Студия</a></li>
+          <li class="nav-li"><a class="nav-li-port" href="./portfolio.html">Портфолио</a></li>
           <li class="nav-li"><a class="nav-li-cont"href="">Контакты</a></li>
         </ul>
       </nav>
