--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
   <body>
     <header>
         <!-- logo -->
-          <a class="title-main" href="./">Web<span class="title">Studio</span></a>
+          <a class="title-main" href="./index.html">Web<span class="title">Studio</span></a>
         <!-- main nav -->
         <nav class="nav">
           <ul class="nav-ul">
@@ -93,7 +93,7 @@
         </section>
     </main>
     <footer class="foot">
-        <a class="footer-logo" href="./">Web<span class="footer-logo-style">Studio</span></a>
+        <a class="footer-logo" href="./index.html">Web<span class="footer-logo-style">Studio</span></a>
       <address>
         <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
         <a class="footer-mail" href="mailto:info@example.com">info@example.com</a>
